public interface GatewayServicePort {

    boolean hasAccessToLegacyApi(String userId);
}