@startuml
interface GatewayServicePort {
    + boolean hasAccessToLegacyApi(String userId)
}

class GatewayController {
    - GatewayServicePort gatewayServicePort
    + GatewayController(GatewayServicePort gatewayServicePort)
    + handleRequest()
}

class GatewayService{
    + boolean hasAccessToLegacyApi(String userId)
}

class ExterneApiService {
    + communicateWithExternalApi()
}

GatewayController --> GatewayServicePort
GatewayService ..> GatewayServicePort
GatewayService ..> ExterneApiService

@enduml